@@ -36,6 +36,10 @@ TimerBar_BarDisplay:RegisterConfigPanel_XMLTemplate(210, "TellMeWhen_BarDisplayB
 
 
 TimerBar_BarDisplay:PostHookMethod("OnEnable", function(self)
+	local icon = self.icon
+	local attributes = icon.attributes
+	self.Invert = self.Invert_base
+
 	self:VALUE(icon, attributes.value, attributes.maxValue, attributes.valueColor)
 end)
 
@@ -62,55 +66,67 @@ function TimerBar_BarDisplay:GetValue()
 			end
 		end
 
-	else
+	elseif self.value then
 		-- Display a set value.
 		if self.Invert then
-			return self.Max - self.value + self.Offset, false
-		else
 			return self.value + self.Offset, false
+		else
+			return self.Max - self.value + self.Offset, false
 		end
+	else
+		return 0, true
 	end
 end
 
 function TimerBar_BarDisplay:VALUE(icon, value, maxValue, valueColor)
-	if value then
+	if value and maxValue then
 		self.duration = nil
 		self.start = nil
+		self.Invert = not self.Invert_base
 
 		self.value = value
 		self.Max = self.FakeMax or maxValue
 		self.bar:SetMinMaxValues(0, self.Max)
 
-		self:SetupColors(valueColor)
+		self:SetupColors(self.sourceIcon, valueColor)
 
 		self:UpdateValue()
 	end
 end
 TimerBar_BarDisplay:SetDataListner("VALUE")
 
-function TimerBar_BarDisplay:SetupColors(valueColor)
-	if sourceIcon.BarDisplay_EnableColors then
+function TimerBar_BarDisplay:SetupColors(icon, valueColor)
+	icon = icon or self.icon
+
+	if icon.BarDisplay_EnableColors then
 		self:SetColors(
-			sourceIcon.BarDisplay_StartColor,
-			sourceIcon.BarDisplay_MiddleColor,
-			sourceIcon.BarDisplay_CompleteColor)
+			icon.BarDisplay_StartColor,
+			icon.BarDisplay_MiddleColor,
+			icon.BarDisplay_CompleteColor)
 
 	elseif valueColor then
-		self:SetColors(
-			valueColor,
-			valueColor,
-			valueColor)
-
+		if #valueColor == 3 then
+			self:SetColors(unpack(valueColor))
+		else
+			self:SetColors(
+				valueColor,
+				valueColor,
+				valueColor)
+		end
 	else
 		self:SetColors(
-			sourceIcon.typeData.Colors.CBS,
-			sourceIcon.typeData.Colors.CBM,
-			sourceIcon.typeData.Colors.CBC)
+			icon.typeData.Colors.CBS,
+			icon.typeData.Colors.CBM,
+			icon.typeData.Colors.CBC)
 	end
 end
 
 function TimerBar_BarDisplay:SetupForIcon(sourceIcon)
-	self.Invert = sourceIcon.BarDisplay_Invert
+	self.Invert_base = sourceIcon.BarDisplay_Invert
+	self.Invert = self.Invert_base
+	if self.value then
+		self.Invert = not self.Invert_base
+	end
 	
 	self.BarGCD = sourceIcon.BarDisplay_BarGCD
 	if sourceIcon.typeData.hasNoGCD then
@@ -119,13 +135,14 @@ function TimerBar_BarDisplay:SetupForIcon(sourceIcon)
 
 	self.Offset = 0
 
-	if self.Invert or sourceIcon.BarDisplay_FakeMax == 0 then
+	if sourceIcon.BarDisplay_FakeMax == 0 then
 		self.FakeMax = nil
 	else
 		self.FakeMax = sourceIcon.BarDisplay_FakeMax
 	end
 
-	self:SetupColors(nil)
+	self.sourceIcon = sourceIcon
+	self:SetupColors(sourceIcon, sourceIcon.attributes.valueColor)
 	
 	self:UpdateValue(1)
 end
@@ -140,7 +157,8 @@ TimerBar_BarDisplay:SetIconEventListner("TMW_ICON_SETUP_POST", function(Module, 
 		
 		Module.bar:SetValue(Module.Max)
 		Module.bar:SetAlpha(.6)
-		local co = Module.completeColor			
+		
+		local co = Module.completeColor
 		Module.bar:SetStatusBarColor(
 			co.r,
 			co.g,
