@@ -19,8 +19,9 @@
 <Include file="IconType_runes\includes.config.xml"/>
 <Include file="IconType_swingtimer\includes.config.xml"/>
 <Include file="IconType_totem\includes.config.xml"/>
-<Include file="IconType_unitcooldown\includes.config.xml"/>
 <Include file="IconType_uierror\includes.config.xml"/>
+<Include file="IconType_unitcooldown\includes.config.xml"/>
+<Include file="IconType_value\includes.config.xml"/>
 <Include file="IconType_wpnenchant\includes.config.xml"/>
 
 </Ui>
